--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <div id="container">
         <h1>Generate a <span>random password</span></h1>
         <p>Never use an insecure password again</p>
-        <button onclick="generatePassword()">Generate passwords</button>
-        <button onclick="clearPassword()">Clear</button>
+        <button id="generateButton">Generate passwords</button>
+        <button id="clearButton">Clear</button>
         <hr> <!-- Add a line after the button -->
         <div id="passwords-container" style="display: none;">
             <div class="password-box">
